# kaiju-app

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yaml  tests.yaml
docs/: requirements.txt
docs/source/: app_guide.rst  conf.py  conf_spec.rst  config_guide.rst  index.rst  packages.rst  reference.rst  service_guide.rst
docs/source/api/: app.rst  bases.rst  configurator.rst  errors.rst  loader.rst  scheduler.rst  server.rst  utils.rst
docs/source/diagrams/: app_start.bpmn  application_diagram.drawio
docs/source/guide/: packages.rst  service.rst
examples/: basic.py  dependency.py
src/kaiju_app/: __init__.py  app.py  bases.py  configurator.py  errors.py  interfaces.py  loader.py  scheduler.py  server.py  utils.py
tests/: test_app_loader_configs.py  test_app_loader_resolve_dependencies.py  test_configuration_loader.py  test_scheduler.py  test_server.py  test_services.py
