[metadata]
name = kaiju-app
version = attr: kaiju_app.__version__
description = Python modular application and services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/violet-black/kaiju-app
author = violetblackdev@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
keywords =
    application
    microservice
    asyncio
    infrastructure

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    template-dict
    uvlog
    kaiju-scheduler

[options.entry_points]
console_scripts =

[options.packages.find]
where=src

[options.extras_require]
test=
    pytest
    coverage
    pytest-asyncio
dev =
    pip-tools
    tox
    mypy
    isort
    black
    pre-commit
docs=
    sphinx
    python_docs_theme
    m2r2

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"

[flake8]
max-line-length = 125
max-doc-length = 135
select = E
ignore = E704